Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12554

Wrong OpenGLVersionFlags

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.1
    • 4.6.3
    • GUI: OpenGL
    • None
    •  Windows 7 x64
    • 0a94e2af3c29afa6e8d7ae3041bed4f187b3c1ca

    Description

      I am using a Radeon 5700 with drivers that supports OpenGL 4.0.
      I check if the 1.5 version is supported and when I call QGLFormat::openGLVersionFlags() I retrieve an invalid answer QGLFormat::OpenGL_Version_None.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rweather Rhys Weatherley (closed Nokia identity) (Inactive)
            nosleduc nosleduc
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes